tests/snapshots/examples_fixtures/type_system__failing__44_effect_poly_hof_nested_missing_effect.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/44_effect_poly_hof_nested_missing_effect.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `wrap_twice` requires effect `Console` in this function signature.

  examples/type_system/failing/44_effect_poly_hof_nested_missing_effect.flx:17:5
   |
17 |     wrap_twice(io_step, x)
   |     ^^^^^^^^^^
   |     ---------- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.
== stdout ==
<not executed>
